# mdr32f9q2i_template

./: CMakeLists.txt  README.md  openocd.cfg
lib/CMSIS/CM3/DeviceSupport/MDR32F9Qx/startup/gcc/: startup_MDR32F9Qx.S  system_MDR32F9Qx.c
lib/MDR32F9Qx_StdPeriph_Driver/src/: MDR32F9Qx_dma.c
src/: MDR32F9Qx_config.h  main.c
